--- a/src/main/resources/df.properties
+++ b/src/main/resources/df.properties
@@ -19,3 +19,8 @@ redis.pool.testOnReturn=true
 mail.host=smtp.yeah.net
 mail.username=ceshihahu@yeah.net
 mail.password=ceshihahu000000
+
+redis.pool.maxActive=200
+redis.pool.maxIdle=50
+redis.pool.minIdle=20
+redis.pool.maxWait=3000
